Units search column indexed also with the street addrress, added order_units_by_num_services param to the search api, possible to disable ordering by number of services for units, updated swagger documentation.
