# services/search/specification.swagger.yaml
@@ -36,6 +36,13 @@ components:
         type: string
       example: fi
       default: fi
+    order_units_by_num_services_param:
+      name: order_units_by_num_services
+      in: query
+      schema:
+        type: boolean
+        default: true
+      description: If set to false ordering by number of services is discarded in units results.   
     use_trigram_param:
       name: use_trigram
       in: query
@@ -150,6 +157,7 @@ paths:
         - $ref: "#/components/parameters/q_param"
         - $ref: "#/components/parameters/language_param"
         - $ref: "#/components/parameters/use_trigram_param"
+        - $ref: "#/components/parameters/order_units_by_num_services_param"
         - $ref: "#/components/parameters/sql_query_limit_param"
         - $ref: "#/components/parameters/unit_limit_param"
         - $ref: "#/components/parameters/service_limit_param"
